kubernetes/apps/immich/valkey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: immich
spec:
  ports:
    - port: 6379
  selector:
    app: valkey
